--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,36 @@
 .container {
     height: 100vh;
     width: 100%;
+
+    .main-container {
+        display: flex;
+        justify-content: space-between;
+        padding: 0 20px;
+        position: relative;
+
+        .logo-container {
+            padding-top: 20px;
+        }
+
+        .pic-container {
+            position: absolute;
+            top: 0;
+            right: 0;
+            z-index: -1;
+        }
+    }
+
+    .currency-name-container {
+        margin-top: 21px;
+        padding: 43px;
+        background: #000;
+
+        .currency-name {
+            text-align: center;
+            color: #FFF;
+            text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+            font-size: 96px;
+            font-weight: 400;
+        }
+    }
 }
