--- a/src/components/Logo/Logo.style.scss
+++ b/src/components/Logo/Logo.style.scss
@@ -1,6 +1,7 @@
 .logo {
     display: flex;
     align-items: center;
+    margin-left: 15px;
     color: #000;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
@@ -15,6 +16,7 @@
         .transcript-text {
             font-size: 20px;
             font-weight: 300;
+            margin-left: 10px;
         }
     }
 }
