--- a/src/App.scss
+++ b/src/App.scss
@@ -8,6 +8,10 @@
         padding: 0 20px;
         position: relative;
 
+        @media screen and (max-width: 450px) {
+            justify-content: center;
+        }
+
         .logo-container {
             padding-top: 20px;
         }
@@ -17,6 +21,10 @@
             top: 0;
             right: 0;
             z-index: -1;
+
+            @media screen and (max-width: 450px) {
+                display: none;
+            }
         }
     }
 
@@ -25,12 +33,20 @@
         padding: 43px;
         background: #000;
 
+        @media screen and (max-width: 450px) {
+            padding: 32px;
+        }
+
         .currency-name {
             text-align: center;
             color: #FFF;
             text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
             font-size: 96px;
             font-weight: 400;
+
+            @media screen and (max-width: 450px) {
+                font-size: 64px;
+            }
         }
     }
 }
