--- a/src/components/CurrencySelector/CurrencySelector.style.scss
+++ b/src/components/CurrencySelector/CurrencySelector.style.scss
@@ -5,6 +5,10 @@
     font-weight: 300;
     position: relative;
 
+    @media screen and (max-width: 450px) {
+        margin: 0 auto;
+    }
+
     .selector-btn {
         display: flex;
         justify-content: space-between;
