add loader spinner

--- a/src/pages/HomePage/HomePage.style.scss
+++ b/src/pages/HomePage/HomePage.style.scss
@@ -29,6 +29,8 @@
     }
 
     .currency-name-container {
+        display: flex;
+        justify-content: center;
         margin-top: 21px;
         padding: 43px;
         background: #000;
