--- a/src/pages/HomePage/HomePage.style.scss
+++ b/src/pages/HomePage/HomePage.style.scss
@@ -41,8 +41,8 @@
 
         .currency-name {
             text-align: center;
-            color: #FFF;
-            text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+            color: var(--secondary-text-color);
+            text-shadow: var(--main-shadow);
             font-size: 96px;
             font-weight: 400;
 
