--- a/src/shared/components/Logo/Logo.style.scss
+++ b/src/shared/components/Logo/Logo.style.scss
@@ -2,8 +2,8 @@
     display: flex;
     align-items: center;
     margin-left: 15px;
-    color: #000;
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    color: var(--main-text-color);
+    text-shadow: var(--main-shadow);
 
     .title {
         font-size: 96px;
