--- a/src/shared/components/Selector/Selector.style.scss
+++ b/src/shared/components/Selector/Selector.style.scss
@@ -1,6 +1,6 @@
 .selector {
     width: 181px;
-    color: #000;
+    color: var(--main-text-color);
     font-size: 18px;
     font-weight: 300;
     position: relative;
@@ -16,7 +16,7 @@
         padding: 10px 15px;
         border-radius: 10px;
         border: 1px solid #DAD6D6;
-        box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+        box-shadow: var(--main-shadow);
         cursor: pointer;
     }
 
