--- a/src/app/styles/variables.scss
+++ b/src/app/styles/variables.scss
@@ -1,5 +1,5 @@
 :root {
-    --main-text-color: #000;
-    --secondary-text-color: #FFF;
-    --main-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  --main-text-color: #000;
+  --secondary-text-color: #fff;
+  --main-shadow: 0px 4px 4px rgb(0 0 0 / 25%);
 }
