--- a/src/pages/HomePage/HomePage.style.scss
+++ b/src/pages/HomePage/HomePage.style.scss
@@ -1,54 +1,54 @@
 .container {
-    height: 100vh;
-    width: 100%;
+  height: 100vh;
+  width: 100%;
 
-    .main-container {
-        display: flex;
-        justify-content: space-between;
-        padding: 0 20px;
-        position: relative;
+  .main-container {
+    display: flex;
+    justify-content: space-between;
+    padding: 0 20px;
+    position: relative;
 
-        @media screen and (max-width: 450px) {
-            justify-content: center;
-        }
-
-        .logo-container {
-            padding-top: 20px;
-        }
-
-        .pic-container {
-            position: absolute;
-            top: 0;
-            right: 0;
-            z-index: -1;
-
-            @media screen and (max-width: 450px) {
-                display: none;
-            }
-        }
+    @media screen and (width <= 450px) {
+      justify-content: center;
     }
 
-    .currency-name-container {
-        display: flex;
-        justify-content: center;
-        margin-top: 21px;
-        padding: 43px;
-        background: #000;
-
-        @media screen and (max-width: 450px) {
-            padding: 32px;
-        }
-
-        .currency-name {
-            text-align: center;
-            color: var(--secondary-text-color);
-            text-shadow: var(--main-shadow);
-            font-size: 96px;
-            font-weight: 400;
-
-            @media screen and (max-width: 450px) {
-                font-size: 64px;
-            }
-        }
+    .logo-container {
+      padding-top: 20px;
     }
+
+    .pic-container {
+      position: absolute;
+      top: 0;
+      right: 0;
+      z-index: -1;
+
+      @media screen and (width <= 450px) {
+        display: none;
+      }
+    }
+  }
+
+  .currency-name-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 21px;
+    padding: 43px;
+    background: #000;
+
+    @media screen and (width <= 450px) {
+      padding: 32px;
+    }
+
+    .currency-name {
+      text-align: center;
+      color: var(--secondary-text-color);
+      text-shadow: var(--main-shadow);
+      font-size: 96px;
+      font-weight: 400;
+
+      @media screen and (width <= 450px) {
+        font-size: 64px;
+      }
+    }
+  }
 }
