--- a/src/shared/components/Selector/Selector.style.scss
+++ b/src/shared/components/Selector/Selector.style.scss
@@ -1,52 +1,51 @@
 .selector {
+  width: 181px;
+  color: var(--main-text-color);
+  font-size: 18px;
+  font-weight: 300;
+  position: relative;
+
+  @media screen and (width <= 450px) {
+    margin: 0 auto;
+  }
+
+  .selector-btn {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 15px;
+    border-radius: 10px;
+    border: 1px solid #dad6d6;
+    box-shadow: var(--main-shadow);
+    cursor: pointer;
+  }
+
+  .selector-btn-active {
+    box-shadow: none;
+  }
+
+  .selector-content {
+    max-height: 178px;
     width: 181px;
-    color: var(--main-text-color);
-    font-size: 18px;
-    font-weight: 300;
-    position: relative;
+    overflow: auto;
+    border: 1px solid #dad6d6;
+    background: #fff;
+    position: absolute;
+    top: 51px;
+    left: 0;
 
-    @media screen and (max-width: 450px) {
-        margin: 0 auto;
+    .selector-item {
+      padding: 10px 15px;
+      border-bottom: 1px solid #dad6d6;
+      cursor: pointer;
+
+      &:hover {
+        background-color: #f0efef;
+      }
+
+      &:last-of-type {
+        border: none;
+      }
     }
-
-    .selector-btn {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 10px 15px;
-        border-radius: 10px;
-        border: 1px solid #DAD6D6;
-        box-shadow: var(--main-shadow);
-        cursor: pointer;
-    }
-
-    .selector-btn-active {
-        box-shadow: none;
-    }
-
-    .selector-content {
-        max-height: 178px;
-        width: 181px;
-        overflow: auto;
-        border: 1px solid #DAD6D6;
-        background: #FFF;
-        position: absolute;
-        top: 51px;
-        left: 0;
-
-        .selector-item {
-            padding: 10px 15px;
-            border-bottom: 1px solid #DAD6D6;
-            cursor: pointer;
-
-            &:hover {
-                background-color: #F0EFEF;
-            }
-
-            &:last-of-type {
-                border: none;
-            }
-        }
-    }
-
+  }
 }
